[gd_scene load_steps=11 format=3 uid="uid://k0q1xi88ww6c"]

[ext_resource type="Texture2D" uid="uid://exyky00dmbb7" path="res://assets/placeholders/tilemap_packed.png" id="1_0cu3s"]
[ext_resource type="Script" path="res://player/character_controller.gd" id="2_5rg3i"]
[ext_resource type="Texture2D" uid="uid://diq3hmgkesfuk" path="res://icon.svg" id="3_iwf3k"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="4_0uldw"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="4_osgl5"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="5_d41jt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_doyf5"]
texture = ExtResource("1_0cu3s")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0

[sub_resource type="TileSet" id="TileSet_y00lw"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_doyf5")

[sub_resource type="Resource" id="Resource_je67d"]
script = ExtResource("5_d41jt")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7tk4j"]

[node name="Area0" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_y00lw")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 393216, 5, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 1, 720896, 5, 65537, 720896, 7, 131073, 458752, 5, 393217, 458752, 5, 655361, 458752, 5, 2, 851968, 5, 65538, 851968, 7, 131074, 589824, 5, 393218, 589824, 5, 655362, 589824, 5, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 393216, 5, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 5, 0, 0, 65541, 393216, 5, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 6, 131072, 6, 65542, 131072, 6, 131078, 131072, 6, 196614, 131072, 6, 262150, 131072, 6, 327686, 131072, 6, 393222, 131072, 6, 458758, 131072, 6, 524294, 131072, 6, 589830, 327680, 5, 655366, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 131072, 5, 655367, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 393216, 5, 524296, 0, 0, 589832, 131072, 5, 655368, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 393216, 5, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 131072, 5, 655369, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 131072, 5, 655370, 0, 0, 11, 393216, 5, 65547, 720896, 5, 131083, 720896, 6, 196619, 720896, 6, 262155, 720896, 7, 327691, 458752, 5, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 131072, 5, 655371, 0, 0, 12, 0, 0, 65548, 851968, 5, 131084, 851968, 6, 196620, 851968, 6, 262156, 851968, 7, 327692, 589824, 5, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 131072, 5, 655372, 0, 0, 13, 65536, 1, 65549, 65536, 1, 131085, 65536, 1, 196621, 65536, 1, 262157, 65536, 2, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 131072, 5, 655373, 0, 0, 14, 0, 0, 65550, 983040, 268435460, 131086, 0, 0, 196622, 0, 0, 262158, 65536, 1, 327694, 65536, 2, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 131072, 5, 655374, 0, 0, 15, 720896, 5, 196623, 458752, 5, 262159, 0, 0, 327695, 131072, 2, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 131072, 5, 655375, 0, 0, 16, 786432, 5, 65552, 786432, 6, 196624, 524288, 6, 262160, 0, 0, 327696, 65536, 1, 393232, 65536, 2, 458768, 0, 0, 524304, 0, 0, 589840, 131072, 5, 655376, 0, 0, 17, 851968, 5, 65553, 851968, 6, 196625, 589824, 5, 262161, 0, 0, 327697, 0, 0, 393233, 131072, 2, 458769, 0, 0, 524305, 0, 0, 589841, 131072, 5, 655377, 0, 0, 18, 0, 0, 65554, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 131072, 3, 458770, 0, 0, 524306, 327680, 5, 589842, 327680, 5, 655378, 917504, 0, 19, 196608, 1, 65555, 196608, 1, 131091, 196608, 1, 196627, 196608, 1, 262163, 196608, 1, 327699, 196608, 1, 393235, 196608, 2, 458771, 196608, 1, 524307, 196608, 1, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 393216, 5, 720901, 917504, 0, 720902, 917504, 0, 720903, 917504, 0, 720904, 917504, 0, 720905, 917504, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 393216, 5, 720911, 917504, 0, 720912, 917504, 0, 720913, 917504, 0, 720914, 917504, 0, 720915, 917504, 0, 524289, 720896, 5, 589825, 720896, 7, 524290, 851968, 5, 589826, 851968, 7, 458753, 0, 0, 458754, 0, 0, 262145, 720896, 5, 327681, 720896, 7, 262146, 851968, 5, 327682, 851968, 7, 196609, 0, 0, 196610, 0, 0, 131087, 720896, 7, 131089, 851968, 7, 131088, 786432, 7, 65551, 720896, 6, 131090, 0, 0, 786431, 786432, 1, 720895, 786432, 1, 655359, 786432, 1, 589823, 1048576, 6, 524287, 1048576, 6, 458751, 1048576, 6, 393215, 1048576, 6, 327679, 786432, 1, 262143, 786432, 1, 196607, 786432, 1, 131071, 786432, 1, 65535, 786432, 1, -1, 786432, 2, -65536, 720896, 2, -65535, 720896, 2, -65534, 720896, 2, -65533, 720896, 2, -65532, 720896, 2, -65531, 720896, 2, -65528, 720896, 2, -65527, 720896, 2, -65526, 720896, 2, -65525, 720896, 2, -65524, 720896, 2, -65523, 65536, 2, -65522, 131072, 2, -65521, 131072, 2, -65520, 131072, 2, -65519, 131072, 2, -65518, 131072, 2, -65517, 196608, 2, -131060, 720896, 1, -131061, 720896, 1, -131062, 720896, 1, -131063, 720896, 1, -131064, 720896, 1, -196600, 720896, 1, -196599, 720896, 1, -196598, 720896, 1, -196597, 720896, 1, -196596, 720896, 1, -131059, 65536, 1, -196595, 65536, 0, -131058, 131072, 1, -196594, 131072, 0, -196593, 131072, 0, -196592, 131072, 0, -196591, 131072, 0, -131055, 131072, 1, -131054, 131072, 1, -131057, 131072, 1, -131056, 131072, 1, -196590, 131072, 0, -131053, 196608, 1, -196589, 196608, 0, -196588, 262144, 0, -131052, 262144, 1, -65516, 262144, 1, 20, 262144, 1, 65556, 262144, 1, 131092, 262144, 1, 196628, 262144, 1, 262164, 262144, 1, 327700, 262144, 1, 393236, 262144, 1, 458772, 262144, 1, 524308, 262144, 1, 589844, 262144, 1, 655380, 262144, 1, 720916, 262144, 2, 720917, 327680, 2, 720918, 327680, 2, -196587, 327680, 0, -196586, 327680, 0, -131051, 327680, 1, -65515, 327680, 1, 21, 327680, 1, 65557, 327680, 1, 131093, 327680, 1, 196629, 327680, 1, 262165, 327680, 1, 327701, 327680, 1, 393237, 327680, 1, 458773, 327680, 1, 524309, 327680, 1, 589845, 327680, 1, 655381, 327680, 1, -131050, 327680, 1, -65514, 327680, 1, 22, 327680, 1, 65558, 327680, 1, 131094, 327680, 1, 196630, 327680, 1, 262166, 327680, 1, 327702, 327680, 1, 393238, 327680, 1, 458774, 327680, 1, 524310, 327680, 1, 589846, 327680, 1, 655382, 327680, 1, -131073, 720896, 1, -65537, 720896, 1, -196608, 720896, 1, -131072, 720896, 1, -196607, 720896, 1, -131071, 720896, 1, -196606, 720896, 1, -131070, 720896, 1, -196605, 720896, 1, -131069, 720896, 1, -196604, 720896, 1, -131068, 720896, 1, -196603, 720896, 1, -131067, 720896, 1, -131075, 720896, 1, -65539, 720896, 1, -3, 720896, 1, 65533, 720896, 1, 131069, 720896, 1, 196605, 720896, 1, 262141, 720896, 1, 327677, 720896, 1, 393213, 720896, 2, 458749, 0, 4, 524285, 0, 4, 589821, 720896, 0, 655357, 720896, 1, -131074, 720896, 1, -65538, 720896, 1, -2, 720896, 1, 65534, 720896, 1, 131070, 720896, 1, 196606, 720896, 1, 262142, 720896, 1, 327678, 720896, 1, 393214, 720896, 2, 458750, 0, 3, 524286, 0, 3, 589822, 720896, 0, 655358, 720896, 1, 720893, 720896, 1, 786429, 720896, 1, 720894, 720896, 1, 786430, 720896, 1, -131065, 131072, 6, -196602, 131072, 6, -65529, 0, 4, -131066, 0, 4, -196601, 0, 2, -65530, 131072, 6, 851967, 720896, 0, 786432, 720896, 0, 786433, 720896, 0, 786434, 720896, 0, 786435, 720896, 0, 851965, 720896, 1, 917501, 720896, 1, 851966, 720896, 1, 917502, 720896, 1, 917503, 720896, 1, 851968, 720896, 1, 851969, 720896, 1, 851970, 720896, 1, 851971, 720896, 1, 786452, 131072, 0, 786453, 131072, 0, 786454, 196608, 0, 786451, 917504, 0, 786436, 917504, 0, 786437, 917504, 0, 786438, 917504, 0, 786439, 917504, 0, 786440, 917504, 0, 786441, 131072, 1, 786442, 131072, 1, 786444, 131072, 1, 786445, 917504, 0, 786446, 917504, 0, 786447, 917504, 0, 786448, 917504, 0, 786449, 917504, 0, 851972, 917504, 0, 851973, 917504, 0, 851974, 917504, 0, 851975, 131072, 1, 851976, 131072, 1, 851977, 131072, 1, 851978, 131072, 1, 851979, 917504, 0, 851980, 917504, 0, 851981, 917504, 0, 851982, 917504, 0, 851983, 917504, 0, 851984, 917504, 0, 851985, 917504, 0, 851987, 131072, 1, 851988, 131072, 1, 851989, 131072, 1, 851990, 196608, 1, 917525, 131072, 2, 917526, 196608, 2, 983060, 131072, 1610612739, 1048596, 131072, 1610612739, 917509, 917504, 0, 917510, 131072, 1, 917511, 131072, 1, 917512, 131072, 1, 917513, 131072, 1, 917514, 131072, 1, 917515, 131072, 1, 917516, 917504, 0, 917517, 917504, 0, 917518, 917504, 0, 917519, 917504, 0, 917520, 131072, 1, 917521, 131072, 1, 917522, 131072, 1, 917523, 131072, 1, 917524, 131072, 2, 983045, 131072, 1, 983046, 131072, 1, 983047, 131072, 1, 983048, 131072, 1, 983049, 131072, 1, 983050, 131072, 1, 983051, 131072, 1, 983052, 131072, 1, 983053, 917504, 0, 983054, 131072, 1, 983055, 131072, 1, 983056, 131072, 1, 983057, 131072, 1, 983058, 131072, 1, 983059, 131072, 1, 1048581, 131072, 1, 1048582, 131072, 1, 1048583, 131072, 1, 1048584, 131072, 1, 1048585, 131072, 1, 1048586, 131072, 1, 1048587, 131072, 1, 1048588, 131072, 1, 1048589, 131072, 1, 1048590, 131072, 1, 1048591, 131072, 1, 1048592, 131072, 1, 1048593, 131072, 1, 1048594, 131072, 1, 1048595, 131072, 1, 917508, 917504, 0, 983044, 786432, 1, 1048580, 786432, 1, 983037, 720896, 1, 1048573, 720896, 1, 1114109, 720896, 1, 983038, 720896, 1, 1048574, 720896, 1, 1114110, 720896, 1, 983039, 720896, 1, 1048575, 720896, 1, 1114111, 720896, 1, 917504, 720896, 1, 983040, 720896, 1, 1048576, 720896, 1, 917505, 720896, 1, 983041, 720896, 1, 1048577, 720896, 1, 917506, 720896, 1, 983042, 720896, 1, 1048578, 720896, 1, 917507, 720896, 1, 983043, 720896, 1, 1048579, 720896, 1, 1114115, 720896, 1, 1179652, 720896, 1, 1245189, 720896, 1, 1245190, 720896, 1, 1245191, 720896, 1, 1245192, 720896, 1, 1245193, 720896, 1, 1245194, 720896, 1, 1245195, 720896, 1, 1245196, 720896, 1, 1245197, 720896, 1, 1245198, 720896, 1, 1245199, 720896, 1, 1245200, 720896, 1, 1245201, 720896, 1, 1245202, 720896, 1, 1114116, 786432, 0, 1179653, 786432, 0, 1179654, 720896, 0, 1179655, 720896, 0, 1179656, 720896, 0, 1179657, 720896, 0, 1179658, 720896, 0, 1179659, 720896, 0, 1179660, 720896, 0, 1179661, 720896, 0, 1179662, 720896, 0, 1179663, 720896, 0, 1179664, 720896, 0, 1179665, 720896, 0, 1179666, 720896, 0, 1179667, 720896, 0, 1245203, 720896, 1, 1114117, 131072, 1, 1114118, 131072, 1, 1114119, 131072, 1, 1114120, 131072, 1, 1114121, 131072, 1, 1114122, 131072, 1, 1114123, 131072, 1, 1114124, 131072, 1, 1114125, 131072, 1, 1114126, 131072, 1, 1114127, 131072, 1, 1114128, 131072, 1, 1114129, 131072, 1, 1114130, 131072, 1, 983061, 131072, 1610612739, 1048597, 131072, 1610612739, 983062, 327680, 5, 1048598, 327680, 5, 1048599, 327680, 5, 1048600, 327680, 5, 983064, 327680, 5, 983065, 327680, 5, 917528, 327680, 5, 983063, 327680, 5, 917527, 327680, 5, 851991, 327680, 5, 786455, 327680, 5, 786456, 327680, 5, 786457, 327680, 5, 851993, 327680, 5, 851992, 327680, 5, 917529, 327680, 5, 917530, 327680, 5, 1048601, 327680, 5, 1048602, 327680, 5, 1048603, 327680, 5, 1048604, 327680, 5, 983068, 327680, 5, 983067, 327680, 5, 983066, 327680, 5, 917531, 327680, 5, 917532, 327680, 5, 851996, 327680, 5, 851995, 327680, 5, 851994, 327680, 5, 786458, 327680, 5, 786459, 327680, 5, 786460, 327680, 5, 786461, 327680, 5, 851997, 327680, 5, 917533, 327680, 5, 983069, 327680, 5, 1048605, 327680, 5, 1048606, 327680, 5, 983070, 327680, 5, 983071, 327680, 5, 917534, 327680, 5, 851998, 327680, 5, 786462, 327680, 5, 786463, 327680, 5, 851999, 327680, 5, 917535, 327680, 5, 1048607, 327680, 5, 1048608, 65536, 1, 983072, 65536, 1, 917536, 65536, 1, 852000, 65536, 1, 786464, 65536, 0, 720919, 327680, 2, 720920, 327680, 2, 720921, 327680, 2, 720922, 327680, 2, 720923, 327680, 2, 720924, 327680, 2, 720925, 327680, 2, 720926, 327680, 2, 720927, 327680, 2, 720928, 327680, 2, 720929, 327680, 2, 720930, 327680, 2, 720931, 327680, 2, 720932, 327680, 2, 720933, 327680, 2, 720934, 327680, 2, -196585, 327680, 1, -131049, 327680, 1, -65513, 327680, 1, 23, 327680, 1, 65559, 327680, 1, 131095, 327680, 1, 196631, 327680, 1, 262167, 327680, 1, 327703, 327680, 1, 393239, 327680, 1, 458775, 327680, 1, 524311, 327680, 1, 589847, 327680, 1, 655383, 327680, 1, -196584, 327680, 1, -131048, 327680, 1, -65512, 327680, 1, 24, 327680, 1, 65560, 327680, 1, 131096, 327680, 1, 196632, 327680, 1, 262168, 327680, 1, 327704, 327680, 1, 393240, 327680, 1, 458776, 327680, 1, 524312, 327680, 1, 589848, 327680, 1, 655384, 327680, 1, -196583, 327680, 1, -131047, 327680, 1, -65511, 327680, 1, 25, 327680, 1, 65561, 327680, 1, 131097, 327680, 1, 196633, 327680, 1, 262169, 327680, 1, 327705, 327680, 1, 393241, 327680, 1, 458777, 327680, 1, 524313, 327680, 1, 589849, 327680, 1, 655385, 327680, 1, -196582, 327680, 1, -131046, 327680, 1, -65510, 327680, 1, 26, 327680, 1, 65562, 327680, 1, 131098, 327680, 1, 196634, 327680, 1, 262170, 327680, 1, 327706, 327680, 1, 393242, 327680, 1, 458778, 327680, 1, 524314, 327680, 1, 589850, 327680, 1, 655386, 327680, 1, -196581, 327680, 1, -131045, 327680, 1, -65509, 327680, 1, 27, 327680, 1, 65563, 327680, 1, 131099, 327680, 1, 196635, 327680, 1, 262171, 327680, 1, 327707, 327680, 1, 393243, 327680, 1, 458779, 327680, 1, 524315, 327680, 1, 589851, 327680, 1, 655387, 327680, 1, -196580, 327680, 1, -131044, 327680, 1, -65508, 327680, 1, 28, 327680, 1, 65564, 327680, 1, 131100, 327680, 1, 196636, 327680, 1, 262172, 327680, 1, 327708, 327680, 1, 393244, 327680, 1, 458780, 327680, 1, 524316, 327680, 1, 589852, 327680, 1, 655388, 327680, 1, -196579, 327680, 1, -131043, 327680, 1, -65507, 327680, 1, 29, 327680, 1, 65565, 327680, 1, 131101, 327680, 1, 196637, 327680, 1, 262173, 327680, 1, 327709, 327680, 1, 393245, 327680, 1, 458781, 327680, 1, 524317, 327680, 1, 589853, 327680, 1, 655389, 327680, 1, -196578, 327680, 1, -131042, 327680, 1, -65506, 327680, 1, 30, 327680, 1, 65566, 327680, 1, 131102, 327680, 1, 196638, 327680, 1, 262174, 327680, 1, 327710, 327680, 1, 393246, 327680, 1, 458782, 327680, 1, 524318, 327680, 1, 589854, 327680, 1, 655390, 327680, 1, -196577, 327680, 1, -131041, 327680, 1, -65505, 327680, 1, 31, 327680, 1, 65567, 327680, 1, 131103, 327680, 1, 196639, 327680, 1, 262175, 327680, 1, 327711, 327680, 1, 393247, 327680, 1, 458783, 327680, 1, 524319, 327680, 1, 589855, 327680, 1, 655391, 327680, 1, -196576, 327680, 1, -131040, 327680, 1, -65504, 327680, 1, 32, 327680, 1, 65568, 327680, 1, 131104, 327680, 1, 196640, 327680, 1, 262176, 327680, 1, 327712, 327680, 1, 393248, 327680, 1, 458784, 327680, 1, 524320, 327680, 1, 589856, 327680, 1, 655392, 327680, 1, -196575, 327680, 1, -131039, 327680, 1, -65503, 327680, 1, 33, 327680, 1, 65569, 327680, 1, 131105, 327680, 1, 196641, 327680, 1, 262177, 327680, 1, 327713, 327680, 1, 393249, 327680, 1, 458785, 327680, 1, 524321, 327680, 1, 589857, 327680, 1, 655393, 327680, 1, -196574, 327680, 1, -131038, 327680, 1, -65502, 327680, 1, 34, 327680, 1, 65570, 327680, 1, 131106, 327680, 1, 196642, 327680, 1, 262178, 327680, 1, 327714, 327680, 1, 393250, 327680, 1, 458786, 327680, 1, 524322, 327680, 1, 589858, 327680, 1, 655394, 327680, 1, -196573, 327680, 1, -131037, 327680, 1, -65501, 327680, 1, 35, 327680, 1, 65571, 327680, 1, 131107, 327680, 1, 196643, 327680, 1, 262179, 327680, 1, 327715, 327680, 1, 393251, 327680, 1, 458787, 327680, 1, 524323, 327680, 1, 589859, 327680, 1, 655395, 327680, 1, -196572, 327680, 1, -131036, 327680, 1, -65500, 327680, 1, 36, 327680, 1, 65572, 327680, 1, 131108, 327680, 1, 196644, 327680, 1, 262180, 327680, 1, 327716, 327680, 1, 393252, 327680, 1, 458788, 327680, 1, 524324, 327680, 1, 589860, 327680, 1, 655396, 327680, 1, -196571, 327680, 1, -131035, 327680, 1, -65499, 327680, 1, 37, 327680, 1, 65573, 327680, 1, 131109, 327680, 1, 196645, 327680, 1, 262181, 327680, 1, 327717, 327680, 1, 393253, 327680, 1, 458789, 327680, 1, 524325, 327680, 1, 589861, 327680, 1, 655397, 327680, 1, -196570, 327680, 1, -131034, 327680, 1, -65498, 327680, 1, 38, 327680, 1, 65574, 327680, 1, 131110, 327680, 1, 196646, 327680, 1, 262182, 327680, 1, 327718, 327680, 1, 393254, 327680, 1, 458790, 327680, 1, 524326, 327680, 1, 589862, 327680, 1, 655398, 327680, 1, 1114132, 131072, 0, 1179668, 720896, 0, 1114131, 131072, 1, 1245204, 720896, 1, 1245205, 720896, 1, 1245206, 720896, 1, 1245207, 720896, 1, 1245208, 720896, 1, 1245209, 720896, 1, 1245210, 720896, 1, 1245211, 720896, 1, 1245212, 720896, 1, 1245213, 720896, 1, 1245214, 720896, 1, 1245215, 720896, 1, 1245216, 720896, 1, 1179669, 720896, 0, 1179670, 720896, 0, 1179671, 720896, 0, 1179672, 720896, 0, 1179673, 720896, 0, 1179674, 720896, 0, 1179675, 720896, 0, 1179676, 720896, 0, 1179677, 720896, 0, 1179678, 720896, 0, 1179679, 720896, 0, 1179680, 720896, 0, 1114133, 131072, 0, 1114134, 131072, 0, 1114135, 131072, 0, 1114136, 131072, 0, 1114137, 131072, 0, 1114138, 131072, 0, 1114139, 131072, 0, 1114140, 131072, 0, 1114141, 131072, 0, 1114142, 131072, 0, 1114143, 131072, 0, 1114144, 131072, 1, 1179681, 655360, 0, 1114145, 655360, 1, 1245217, 720896, 1, 1245218, 720896, 1, 786466, 720896, 1, 852002, 720896, 1, 917538, 720896, 1, 983074, 720896, 1, 1048610, 720896, 1, 1114146, 720896, 1, 1179682, 720896, 1, 786467, 720896, 1, 852003, 720896, 1, 917539, 720896, 1, 983075, 720896, 1, 1048611, 720896, 1, 1114147, 720896, 1, 1179683, 720896, 1, 786468, 720896, 1, 852004, 720896, 1, 917540, 720896, 1, 983076, 720896, 1, 1048612, 720896, 1, 1114148, 720896, 1, 1179684, 720896, 1, 786469, 720896, 1, 852005, 720896, 1, 917541, 720896, 1, 983077, 720896, 1, 1048613, 720896, 1, 1114149, 720896, 1, 1179685, 720896, 1, 786470, 720896, 1, 852006, 720896, 1, 917542, 720896, 1, 983078, 720896, 1, 1048614, 720896, 1, 1114150, 720896, 1, 1179686, 720896, 1, 1245219, 720896, 1, 1245220, 720896, 1, 1245221, 720896, 1, 1245222, 720896, 1, 786465, 655360, 1, 852001, 655360, 1, 917537, 655360, 1, 983073, 655360, 1, 1048609, 655360, 1, 786450, 917504, 0, 851986, 917504, 0, 655379, 196608, 1, 589843, 196608, 1, 786443, 131072, 1, 1179645, 720896, 1, 1245181, 720896, 1, 1310717, 720896, 1, 1179646, 720896, 1, 1245182, 720896, 1, 1310718, 720896, 1, 1179647, 720896, 1, 1245183, 720896, 1, 1310719, 720896, 1, 1114112, 720896, 1, 1179648, 720896, 1, 1245184, 720896, 1, 1114113, 720896, 1, 1179649, 720896, 1, 1245185, 720896, 1, 1114114, 720896, 1, 1179650, 720896, 1, 1245186, 720896, 1, 1179651, 720896, 1, 1245187, 720896, 1, 1245188, 720896, 1)

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
script = ExtResource("4_0uldw")
priority = 1
follow_mode = 5
follow_target = NodePath("../CharacterBody2D")
snap_to_pixel = true
tween_resource = SubResource("Resource_je67d")
dead_zone_width = 0.25
dead_zone_height = 0.25

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("4_osgl5")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
motion_mode = 1
script = ExtResource("2_5rg3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_7tk4j")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_iwf3k")
